--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 dist: trusty
 language: java
+sudo: true
 jdk:
   - oraclejdk15
+addons:
+  apt:
+    packages:
+      - oracle-java15-installer
 before_install:
+  - chmod +x mvnw
   - export TZ=Brazil/East
 deploy:
   provider: heroku
