--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ addons:
     packages:
       - oracle-java15-installer
 before_install:
+  - add-apt-repository ppa:linuxuprising/java
+  - apt update
   - chmod +x mvnw
   - export TZ=Brazil/East
 deploy:
