--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,13 @@
 dist: trusty
 language: java
 sudo: true
-jdk:
-  - oraclejdk15
 addons:
   apt:
     packages:
-      - oracle-java15-installer
+      - openjdk-15-jdk
+jdk:
+  - openjdk15 
 before_install:
-  - add-apt-repository ppa:linuxuprising/java
-  - apt update
-  - chmod +x mvnw
   - export TZ=Brazil/East
 deploy:
   provider: heroku
