--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
   - mvn -N io.takari:maven:wrapper
   - ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 before_install:
+  - chmod +x mvnw
   - export TZ=Brazil/East
 deploy:
   provider: heroku
