--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 language: java
+sudo: true
+dist: trusty
 jdk:
   - oraclejdk15
+addons:
+  apt:
+    packages:
+      - oracle-java15-installer
+before_install:
+  - chmod +x mvnw
 deploy:
   provider: heroku
   api_key:
